<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:title="Criar Tarefa"
        app:navigationIcon="@drawable/ic_baseline_navigate_before_24"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guide_begin"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guide_end"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="@+id/guide_begin"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_title"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_title"
        app:layout_constraintStart_toStartOf="@+id/guide_begin"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_description"
            android:minLines="4"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_description"
        app:layout_constraintStart_toStartOf="@+id/guide_begin"
        app:layout_constraintEnd_toStartOf="@+id/til_time"
        android:layout_marginEnd="4dp"
        android:hint="@string/hint_task_date"
        app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_description"
        app:layout_constraintStart_toEndOf="@+id/til_date"
        app:layout_constraintEnd_toEndOf="@+id/guide_end"
        android:layout_marginStart="4dp"
        android:hint="@string/hint_task_time"
        app:startIconDrawable="@drawable/ic_baseline_access_time_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_begin"
        app:layout_constraintEnd_toStartOf="@id/guide_end"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_create_task"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_create"
        app:layout_constraintStart_toStartOf="@id/guide_begin"
        app:layout_constraintEnd_toStartOf="@id/guide_end"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/btn_cancel_create_task" />

</androidx.constraintlayout.widget.ConstraintLayout>